nlb-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esds-test
  labels:
    app: esds-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esds-test
  template:
    metadata:
      labels:
        app: esds-test
    spec:
      containers:
        - name: personal-website
          image: 552212359451.dkr.ecr.us-east-1.amazonaws.com/rr:2022-02-05.14.32.43-92bd4
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rr
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:552212359451:certificate/d2176176-8b72-485f-bebe-48169fcca582"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-2016-08
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 80
      protocol: TCP
      name: https
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: esds-test
